Gnome: Fix title bar height flickers when containing form control, fixes #195

--- a/gtk-3.0/widgets/_header-bars.scss
+++ b/gtk-3.0/widgets/_header-bars.scss
@@ -254,8 +254,8 @@ headerbar {
     margin-bottom: 5px;
   }
   switch {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
   separator { background: transparent; }
 
